# Autunpad

./: .gitignore  CHANGELOG.md  Cargo.toml  KNOWEDGES.md  README.md  dxdiag.txt  opencode.json  package.json  tauri.conf.json  test-layout.html
.opencode/agents/: architect.md  build-optimizer.md  frontend-specialist.md  security-auditor.md
.opencode/commands/: audit.md  bench.md
docs/sessions/: 2026-07-09.md
src/: executor.rs  file_ops.rs  main.rs  security.rs
ui/: index.html
