[package]
name = "autunpad"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = { version = "0.15", default-features = false }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false
overflow-checks = false
